--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,21 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+
+angular.json
+browserslist
+e2e/
+karma.conf.js
+package.json
+package-lock.json
+tsconfig.app.json
+tsconfig.json
+tsconfig.spec.json
+tslint.json
+.editorconfig
+
+src/assets/
+src/environments/
+src/favicon.ico
+
+
